--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dotenv": "^8.2.0",
     "gmap-vue": "^1.0.0",
     "lodash.get": "^4.4.2",
+    "sass-resources-loader": "^2.0.3",
     "vue": "^2.6.11",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
